<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="ballot_logo_image">ballot logo image</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow">Follow election</string>
    <string name="unfollow">Unfollow election</string>
    <string name="election_information">Election Information</string>
    <string name="voting_location">Voting Location</string>
    <string name="ballot_information">Ballot Information</string>

    <string name="error_message">Error with loading data: %s</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to use the feature.</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_profile_photo">Representative Profile Photo</string>

</resources>
